apps/chupa2/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: 
    backstage.io/kubernetes-id: 
    istio-injection: enabled
  name: 
spec:
  finalizers:
  - kubernetes
